# rpbot-telegram

./: .gitignore  LICENSE  README.md  config.gitignore
BotTelegram/: bot.py  config.json  pyproject.toml  testes.ipynb
site-exemplo/: index.html
